@@ -14,6 +14,7 @@
 
 # 2016-12-28
 # --------------------------------------------------------------------
+# ~ fixed issue with last bin Total MC error being large
 # ~ minor tweaks to the axis ranges
 
 
